Add interface and trait highlight

--- a/styles/base.less
+++ b/styles/base.less
@@ -97,7 +97,9 @@ atom-text-editor.is-focused .line.cursor-line,
 }
 .support.class,
 .entity.name.class,
-.entity.name.type.class {
+.entity.name.type.class,
+.entity.name.type.interface,
+.entity.name.type.trait {
     color: @color-tomato;
 }
 .meta.class {
